--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="input-details">
       <input type="text" id="titleInput" placeholder="Session Title">
       <input type="datetime-local" id="dateTimeStartInput">
-      <input type="number" id="durationInput" placeholder="hours">
+      <input type="number" id="durationInput" placeholder="Duration">
       <input type="datetime-local" id="dateTimeEndInput">
       <input type="text" id="referenceInput" placeholder="Reference">
     </div>
