--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </div>
     <div class="input-details">
       <input type="text" id="titleInput" placeholder="Session Title">
+      <label for="dateTimeStartInput">Start Date and Time</label>
       <input type="datetime-local" id="dateTimeStartInput">
       <input type="number" id="durationInput" placeholder="Duration">
+      <label for="dateTimeEndInput">End Date and Time</label>
       <input type="datetime-local" id="dateTimeEndInput">
       <input type="text" id="referenceInput" placeholder="Reference">
     </div>
