--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
   <div id="cart" class="cart">
     <div id="cartDiv" class="cart-div">
       <button id="cartButton" class="cart-button">
-        <span class="cart-icon">🛒</span>
+        <img src="checkouticon.jfif" class="cart-icon">
         <span id="cartCount" class="cart-count">1</span>
       </button>
+   
     </div>
     <div id="cartItems" class="cart-items"></div>
   </div>
